Improve critical CSS to stop header jump

--- a/less/critical.less
+++ b/less/critical.less
@@ -108,3 +108,11 @@ header {
   max-width:40em;
   margin:0px auto;
 }
+
+@media all and (min-width: 780px) {
+  header {
+    h1 {
+      font-size:4em;
+    }
+  }
+}
