--- a/less/responsive.less
+++ b/less/responsive.less
@@ -4,11 +4,6 @@
   }
 }
 @media all and (min-width: 780px) {
-  header {
-    h1 {
-      font-size:4em;
-    }
-  }
   .pagination * {
     padding:0;
   }
